Fixing overflow on bg intro

--- a/scss/nft.scss
+++ b/scss/nft.scss
@@ -35,13 +35,15 @@
         content: "";
         position: absolute;
         bottom: -15px;
-        left: 0;
+        left: 285px;
         right: 0;
         margin: auto;
-        width: 75px;
-        border-radius: 4px;
-        height: 4px;
+        width: 145px;;
+        height: 10px;
         background-image: linear-gradient(225deg, #FFD109 0%, #B954FF 100%);
+        @media only screen and (max-width: $sm-max) {
+          display: none;
+        }
       }
     }
     .nft-carrousel {
@@ -56,6 +58,7 @@
           position: relative;
           @include transition(all .25s ease);
           width: 85%;
+          margin: 0 auto;
           &:hover {
             @include transform(rotate(-3deg) scale(1.1));
             .character {
@@ -95,7 +98,7 @@
           bottom: -20px;
           left: 15px;
           font-size: 18px;
-          color: $mainColor;
+          color: white;
           font-weight: 900;
           text-shadow: 0px 0px 11px $electriColor, 0px 0px 3px $electriColor;
           @include transform(rotate(-5deg));
@@ -178,10 +181,13 @@
         opacity: 0;
         display: none;
         &:checked ~ label .arrow-down {
-          transform: rotate(180deg);
+          @include transform(rotate(180deg))
         }
         &:checked ~ section{
-          height: 200px;
+          height: auto;
+          padding: 40px 20px;
+          background: rgba(0,0,0,.35);
+          border-radius: 0 0px 10px 10px;
         }
       }
       & > label {
